# meterstack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  INTERVIEW_NOTES.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  billing_dev.db  conftest.py  demo_seed.db  docker-compose.yml  render.yaml  test_entitlements.db  test_integration.db
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  auth_dev.db  billing_dev.db  pyproject.toml  requirements.txt
backend/load_test/: simulate_usage.py
backend/meterstack/: auth.py  config.py  database.py  demo_seed.py  dependencies.py  main.py  metrics.py  models.py  observability.py  routes_analytics.py  routes_api_keys.py  routes_billing.py  routes_entitlements.py  routes_metrics.py  routes_usage.py
backend/meterstack/billing/: stripe_client.py
backend/meterstack/jobs/: usage_rollup.py
backend/meterstack/schemas/: analytics.py  entitlements.py  usage.py
backend/meterstack/services/: analytics.py  entitlements.py  usage.py
backend/migrations/: env.py
backend/migrations/versions/: 20251126_01_initial.py  20251126_02_tenant_stripe_customer.py  20251126_03_processed_stripe_events.py  20251126_04_usage_daily.py  20251126_05_api_keys.py  20251126_06_security_indexes.py
backend/tests/: test_demo_seed.py  test_entitlements.py  test_integration_flows.py  test_platform_guards.py  test_usage_aggregation.py  test_webhooks_idempotency.py
docs/: system-overview.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  (+3 more)
sample-client/: README.md  main.py
(+25 files in other folders)
