[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meterstack"
version = "1.1.0"
description = "MeterStack multi-tenant billing and usage tracking backend"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["meterstack*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
